@@ -2,6 +2,9 @@
 
 SimGrid (3.27.1) NOT RELEASED YET (v3.28 expected June 21. 2021, 03:32 UTC)
 
+XBT:
+ - xbt_assert is not disabled anymore, even when built with enable_debug=off.
+
 ----------------------------------------------------------------------------
 
 SimGrid (3.27) March 29. 2021
